--- a/src/MoneyManager.Web/Pages/Budgets.razor
+++ b/src/MoneyManager.Web/Pages/Budgets.razor
@@ -1,4 +1,5 @@
 @page "/budgets"
+@using MoneyManager.Web.Services.Localization
 @using MoneyManager.Domain.Entities
 @using MoneyManager.Domain.Enums
 @using MoneyManager.Web.Services
@@ -6,8 +7,9 @@
 @attribute [Authorize]
 @inject IBudgetService BudgetService
 @inject ICategoryService CategoryService
+@inject ILocalizationService Localization
 
-<PageTitle>OrÃ§amentos - MoneyManager</PageTitle>
+<PageTitle>@Localization.Get("Budgets.PageTitle")</PageTitle>
 
 <div class="container-fluid py-4">
     <div class="row mb-4">
