fix: Corrigir encoding UTF-8 em todos os arquivos .razor

--- a/src/MoneyManager.Web/Pages/AdminMigration.razor
+++ b/src/MoneyManager.Web/Pages/AdminMigration.razor
@@ -1,4 +1,4 @@
-@page "/admin/migration"
+﻿@page "/admin/migration"
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
 @inject HttpClient Http
