--- a/src/MoneyManager.Web/Pages/Categories.razor
+++ b/src/MoneyManager.Web/Pages/Categories.razor
@@ -1,4 +1,4 @@
-@page "/categories"
+﻿@page "/categories"
 @using MoneyManager.Web.Services.Localization
 @using MoneyManager.Domain.Entities
 @using MoneyManager.Domain.Enums
