--- a/src/MoneyManager.Web/Pages/CreditCardDashboard.razor
+++ b/src/MoneyManager.Web/Pages/CreditCardDashboard.razor
@@ -1,4 +1,4 @@
-@page "/credit-cards/{AccountId}"
+﻿@page "/credit-cards/{AccountId}"
 @using MoneyManager.Domain.Entities
 @using MoneyManager.Domain.Enums
 @using MoneyManager.Application.DTOs.Response
