--- a/src/MoneyManager.Web/Pages/Register.razor
+++ b/src/MoneyManager.Web/Pages/Register.razor
@@ -1,4 +1,4 @@
-@page "/register"
+﻿@page "/register"
 @using MoneyManager.Application.DTOs.Request
 @using MoneyManager.Web.Services
 @using MoneyManager.Web.Services.Localization
