--- a/src/MoneyManager.Web/Pages/_Imports.razor
+++ b/src/MoneyManager.Web/Pages/_Imports.razor
@@ -1,4 +1,4 @@
-@using MoneyManager.Application.DTOs.Request
+﻿@using MoneyManager.Application.DTOs.Request
 @using MoneyManager.Domain.Entities
 @using MoneyManager.Web.Services
 @using MoneyManager.Domain.Enums
